Trying to fix header on iOS

--- a/css/main.css
+++ b/css/main.css
@@ -450,7 +450,6 @@ body {
           color: #F6F6F6;
           margin-right: 5px;
           height: 60px;
-          width: 255px;
           text-align: right; }
         .header .container .profile-menu .menu-underlay .avatar {
           height: 40px;
